# rpypi

./: Cargo.toml  README.md  _CHANGELOG
rpypi/: Cargo.toml
rpypi-server/: Cargo.toml
rpypi.py/: setup.py
rpypi.py/rpypi/: __init__.py
rpypi.py/rpypi/magic/: middleware.py
rpypi/src/: lib.rs
